Fix label Unit price

--- a/frontend/imports/ui/client/widgets/offermodal.html
+++ b/frontend/imports/ui/client/widgets/offermodal.html
@@ -20,7 +20,7 @@
                 </tr>
                 <tr class="row-input-line">
                   <th>PRICE</th>
-                  <td>{{formatBalance (toWei offer.price)}} <span class="span-offer-currency">{{quoteCurrency}}</span></td>
+                  <td>{{formatBalance (toWei offer.price)}} <span class="span-offer-currency">{{quoteCurrency}} / {{baseCurrency}}</span></td>
                 </tr>
                 <tr class="row-input-line">
                   <th>VOLUME</th>
